# librgl

./: .clang-format  .gitignore  .gitmodules  .vimrc  CMakeLists.txt  Makefile  README.md  compile_commands.json  main.c
include/: librgl.h  rgl.h
include/rgl/: FileInfo.h  LinkedList.h  array.h  defs.h  linkedlist.h  logging.h  queue.h  rgl.h  ringbuffer.h  threadpool.h  util.h
lib/rgl/: librgl.c  librgl.h
lib/rgl/Util/: Util.c  Util.h
src/: array.c  fileinfo.c  linkedlist.c  logging.c  queue.c  rgl.c  ringbuffer.c  threadpool.c  util.c
src/FileInfo/: FileInfo.c  FileInfo.h
src/LinkedList/: LinkedList.c  LinkedList.h
src/Util/: GetUserInput.c  GetUserInput.h  Util.c  Util.h
test/: CMakeLists.txt  array.c  array_concat.c  array_get.c  array_new.c  array_push.c  array_remove.c  array_resize.c  array_set.c  array_squash.c  logging.c  queue.c  rgl.c  ringbuffer.c  threadpool.c
